# Blackjack

./: .gitignore.txt  CMakeLists.txt
include/: files.h  game.h  global.h  helpers.h  q_table.csv  q_table_validation.h  qlearning.h  simulation.h  states.csv  training.h
src/: files.cpp  game.cpp  helpers.cpp  main.cpp  q_table_validation.cpp  qlearning.cpp  simulation.cpp  training.cpp
